Adjusting light mode; fixing dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -235,7 +235,8 @@ h1 {
 	/* background-image: linear-gradient(to right top, #604C7C 0%, #2fdaef 50%, #20825A 100%); */
 	/* background-image: linear-gradient(80deg, #b0e4ea 33%, #d7b4f3 75%); */
 	/* background-image: linear-gradient(80deg, #b0e4ea 33%, #809fff 75%); */
-	linear-gradient(80deg, #557bff 25%, #b51ce1 50%, #ff0408 75%)
+	/* background-image: linear-gradient(80deg, #557bff 25%, #b51ce1 50%, #ff0408 75%); */
+	background-image: linear-gradient(to right, #fc6076, #ff9a44, #ef9d43, #e75516);
 }
 
 #main p {
@@ -254,7 +255,8 @@ a {
 	/* background: linear-gradient(99deg, rgb(7, 136, 255) 0%, rgb(153, 0, 255) 100%) left bottom no-repeat; */
 	/* background: linear-gradient(71deg, #b0e4ea 10%, #d7b4f3 90%) left bottom no-repeat; */
 	/* background: linear-gradient(80deg, #0039ff 25%, #b51ce1 50%, #ff0408 75%) left bottom no-repeat; */
-	background: linear-gradient(80deg, #557bff 25%, #b51ce1 50%, #ff0408 75%) left bottom no-repeat;
+	/* background: linear-gradient(80deg, #557bff 25%, #b51ce1 50%, #ff0408 75%) left bottom no-repeat; */
+	background-image: linear-gradient(to right, #fc6076, #ff9a44, #ef9d43, #e75516);
   background-size: 100% 1px;
   padding-bottom: 2px;
 }
@@ -267,21 +269,33 @@ a:hover {
 a.button {
 	padding: 14px 24px;
 	border: none;
-	/* background: linear-gradient(99deg, rgb(7, 136, 255) 0%, rgb(153, 0, 255) 100%); */
-	/* background: linear-gradient(71deg, #b0e4ea 10%, #d7b4f3 90%); */
-	/* background: linear-gradient(80deg, #0039ff 25%, #b51ce1 50%, #ff0408 75%); */
-	background: linear-gradient(80deg, #557bff 25%, #b51ce1 50%, #ff0408 75%);
 	border-radius: 12px;
 	box-shadow: rgb(106 78 255 / 20%) 0px 3px 6px 0px, rgb(0 0 0 / 10%) 0px 0px 0px 0px inset;
 	width: auto;
 	height: auto;
 	font-size: 16px;
 	color: #191718;
+	/* background: linear-gradient(99deg, rgb(7, 136, 255) 0%, rgb(153, 0, 255) 100%); */
+	/* background: linear-gradient(71deg, #b0e4ea 10%, #d7b4f3 90%); */
+	/* background: linear-gradient(80deg, #0039ff 25%, #b51ce1 50%, #ff0408 75%); */
+	/* background: linear-gradient(80deg, #557bff 25%, #b51ce1 50%, #ff0408 75%); */
+	background-image: linear-gradient(to right, #fc6076, #ff9a44, #ef9d43, #e75516);
+  box-shadow: 0 4px 15px 0 rgb(252 104 110 / 75%);
+  background-size: 300% 100%;
+  moz-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
 }
 
 a.button:hover {
 	border-bottom-color: transparent;
 	color: #c5c5c5;
+	background-position: 100% 0;
+  moz-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
 }
 
 /* Footer */
@@ -365,9 +379,11 @@ li a {
 	}
 	a {
 		/* background: linear-gradient(to right top, #604C7C 0%, #2fdaef 50%, #20825A 100%) left bottom no-repeat; */
-		background: linear-gradient(80deg, #b0e4ea 33%, #809fff 75%) left bottom no-repeat;
+		/* background-image: linear-gradient(to right, #fc6076, #ff9a44, #ef9d43, #e75516); */
+		background-image: linear-gradient(80deg, #b0e4ea 33%, #809fff 75%) left bottom no-repeat;
 	}
 	a.button {
 		background: linear-gradient(80deg, #b0e4ea 33%, #809fff 75%);
+		box-shadow: 0 4px 15px 0 rgb(128 160 255 / 75%);
 	}
 }
